--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "start:dev":"nodemon src/app.js",
-    "test": "jest",
+    "start:dev": "nodemon src/app.js",
+    "test": "jest --setupFiles dotenv/config",
     "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config",
     "migrate": "node-pg-migrate",
-    "migrate:test":"node-pg-migrate -f config/database/test.json"
+    "migrate:test": "node-pg-migrate -f config/database/test.json"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/darmayasa221/e-banjar-full-stack-javascript.git"
