--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,8 @@ jobs:
         image: postgres:14
         env: 
           POSTGRES_PASSWORD: ${{ secrets.PGPASSWORD_TEST }}
-          POSTGRES_HOST: ${{ secrets.PGHOST_TEST }}
+          POSTGRES_USER: ${{ secrets.PGUSER_TEST }}
+          POSTGRES_DB: ${{ secrets.PGDATABASE_TEST }}
         ports:
           - 5432:5432
         options: >-
