--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,6 @@ jobs:
         env: 
           POSTGRES_PASSWORD: ${{ secrets.PGPASSWORD_TEST }}
           POSTGRES_USER: ${{ secrets.PGUSER_TEST }}
-          POSTGRES_DB: ${{ secrets.PGDATABASE_TEST }}
         ports:
           - 5432:5432
         options: >-
@@ -40,6 +39,7 @@ jobs:
         npm run migrate up
         npm run test
       env:
+        CI: true
         PGHOST_TEST: ${{ secrets.PGHOST_TEST }}
         PGUSER_TEST: ${{ secrets.PGUSER_TEST }}
         PGDATABASE_TEST: ${{ secrets.PGDATABASE_TEST }}
