--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         env: 
           POSTGRES_PASSWORD: ${{ secrets.PGPASSWORD_TEST }}
           POSTGRES_USER: ${{ secrets.PGUSER_TEST }}
+          POSTGRES_DB: ${{ secrets.PGDATABASE_TEST }}
         ports:
           - 5432:5432
         options: >-
