--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "start:dev":"nodemon src/app.js",
+    "start:dev": "nodemon src/app.js",
     "test": "jest",
     "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config",
     "migrate": "node-pg-migrate",
@@ -31,6 +31,7 @@
     "@hapi/jwt": "^2.1.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "instances-container": "^2.0.6",
     "nanoid": "^4.0.0",
     "pg": "^8.7.3"
   },
