--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "start:dev":"nodemon src/app.js",
-    "test": "jest",
+    "start:dev": "nodemon src/app.js",
+    "test:dev": "jest --setupFiles dotenv/config",
+    "test": "jest --coverage",
     "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config",
     "migrate": "node-pg-migrate",
     "migrate:test": "node-pg-migrate -f config/database/test.json"
@@ -31,7 +32,8 @@
     "@hapi/jwt": "^2.1.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
-    "nanoid": "^4.0.0",
+    "instances-container": "^2.0.6",
+    "nanoid": "^3.3.4",
     "pg": "^8.7.3"
   },
   "devDependencies": {
