--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/app.js",
     "start:dev": "nodemon src/app.js",
+    "test:dev": "jest --setupFiles dotenv/config",
     "test": "jest --coverage",
     "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config",
     "migrate": "node-pg-migrate",
@@ -32,7 +33,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "instances-container": "^2.0.6",
-    "nanoid": "^4.0.0",
+    "nanoid": "^3.3.4",
     "pg": "^8.7.3"
   },
   "devDependencies": {
