--- a/package.json
+++ b/package.json
@@ -4,15 +4,38 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack server",
+    "satrt:watch": "webpack --watch",
+    "build": "NODE_ENV=production webpack",
+    "test": "jest --coverage"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@types/jest": "^28.1.5",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "cssnano": "^5.1.12",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.3",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "postcss-loader": "^7.0.1",
+    "postcss-nesting": "^10.1.10",
+    "postcss-preset-env": "^7.7.2",
+    "tailwindcss": "^3.1.6",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "repository": {
     "type": "git",
@@ -26,5 +49,11 @@
   "bugs": {
     "url": "https://github.com/darmayasa221/e-banjar-full-stack-javascript/issues"
   },
-  "homepage": "https://github.com/darmayasa221/e-banjar-full-stack-javascript#readme"
+  "homepage": "https://github.com/darmayasa221/e-banjar-full-stack-javascript#readme",
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
+  }
 }
