--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/jest": "^28.1.5",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
@@ -32,6 +33,7 @@
     "postcss-loader": "^7.0.1",
     "postcss-nesting": "^10.1.10",
     "postcss-preset-env": "^7.7.2",
+    "react-refresh": "^0.14.0",
     "tailwindcss": "^3.1.6",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
