--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,9 @@
   "plugins": ["react"],
   "rules": {
     "react/jsx-no-useless-fragment": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-unused-vars": "off",
+    "class-methods-use-this": "off"
   },
   "ignorePatterns": ["/dist"]
 }
