--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
   "homepage": "https://github.com/darmayasa221/e-banjar-full-stack-javascript#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "instances-container": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0"
   }
 }
