--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"],
+      "@Applications/*": ["src/Applications/*"],
+      "@Domains/*": ["src/Domains/*"],
+      "@Infrastructures/*": ["src/Infrastructures/*"],
+      "@Commons/*" : ["src/Commons/*"],
+      "@Interfaces/*": ["src/Interfaces/*"]
+    }
   }
 }
