--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   },
   "plugins": ["react"],
   "rules": {
+    "import/no-unresolved":"off",
     "react/jsx-no-useless-fragment": "off",
     "no-underscore-dangle": "off",
     "no-unused-vars": "off",
