--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^28.1.5",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
+    "babel-plugin-module-resolver": "^4.1.0",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.12",
     "eslint": "^8.19.0",
