--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack server",
     "satrt:watch": "webpack --watch",
-    "build": "NODE_ENV=production webpack",
+    "build": "rm -rf dist && NODE_ENV=production webpack",
     "test": "jest --coverage"
   },
   "devDependencies": {
